--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
     <nav class="navbar">
         <a href="#" class="logo">
             <i class="fas fa-brain"></i>
-            QuizMaster
+           Aiden
         </a>
         <div class="nav-links">
             <a href="#features">Features</a>
@@ -522,7 +522,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Transform Learning with AI</h1>
-            <p>QuizMaster uses advanced AI to analyze study materials, generate quizzes, and identify knowledge gaps to accelerate your learning journey.</p>
+            <p>Aiden - Ai Powered Learning Platform.</p>
             <div class="hero-btns">
                 <a href="dashboard.html" class="btn">
                     <i class="fas fa-rocket"></i> Get Started
